--- a/annotation/index.html
+++ b/annotation/index.html
@@ -13,8 +13,6 @@
 <video src="https://www.cs.tufts.edu/comp/20/classic.mp4" id="a_classic" controls></video>
 <div id="lyrics"></div>
 
-<script>
-// Complete this section and create a CSS file named style.css
-</script>
+<script src="annotate.js"></script>
 </body>
 </html>
