wrote code to render map

--- a/landmarks/index.html
+++ b/landmarks/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
 <link href="style.css" rel="stylesheet" />
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 <script src="geo.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 </head>
 
 <body onload="init()">
