--- a/landmarks/index.html
+++ b/landmarks/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="style.css" rel="stylesheet" />
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&libraries=geometry"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="geo.js"></script>
 </head>
 
