added google maps favicon

--- a/landmarks/index.html
+++ b/landmarks/index.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="style.css" rel="stylesheet" />
+<link rel="icon"
+    href="https://www.google.com/images/branding/product/ico/maps_32dp.ico">
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="geo.js"></script>
 </head>
