--- a/security/index.html
+++ b/security/index.html
@@ -14,22 +14,55 @@
 </header>
 
 <h3>Introduction</h3>
-<p></p>
+<p>The product is a web application that upon visiting, displays a google map of the user's location and the locations of nearby users and landmarks within a mile. I was hired to identify security vulnerabilities of the application.</p>
 
 <h3>Methodology</h3>
-<p></p>
+<p>(Describe your methodology pen testing the application, including the tools that you used)</p>
 
 <h3>Abstract of Findings</h3>
-<p></p>
+<p>(Provide an overview of all the security and privacy issues you identified. This section should be written for non-technical managers who do not have technical expertise and do not have time to read the entire document. Write this section using lay language.)</p>
 
 <h3>Issues Found</h3>
-<p></p>
+<ol>
+<li>Issue:
+	<ul>
+	<li>Location of issue:</li>
+	<li>Severity of issue:</li>
+	<li>Description of issue:</li>
+	<li>Proof of vulnerability:</li>
+	<li>Resolution:</li>
+	</ul>
+</li>
+<br>
+<li>Issue:
+	<ul>
+	<li>Location of issue:</li>
+	<li>Severity of issue:</li>
+	<li>Description of issue:</li>
+	<li>Proof of vulnerability:</li>
+	<li>Resolution:</li>
+	</ul>
+</li>
+<br>
+<li>Issue:
+	<ul>
+	<li>Location of issue:</li>
+	<li>Severity of issue:</li>
+	<li>Description of issue:</li>
+	<li>Proof of vulnerability:</li>
+	<li>Resolution:</li>
+	</ul>
+</li>
+</ol>
 
 <h3>Conclusion</h3>
-<p></p>
+<p>(You can also list future considerations and recommendations with costs.)</p>
 
 <h3>References</h3>
-<p></p>
+<p>(A list of references and links that you used for your work.)</p>
+<ul>
+<li></li>
+</ul>
 
 </body>
 
