wrote methodology & started writing conclusion

--- a/security/index.html
+++ b/security/index.html
@@ -17,7 +17,7 @@
 <p>The product is a web application that upon visiting, displays a google map of the user's location and the locations of nearby users and landmarks within a mile. I was hired to identify security vulnerabilities of the application.</p>
 
 <h3>Methodology</h3>
-<p>(Describe your methodology pen testing the application, including the tools that you used)</p>
+<p>To test, I wrote practice scripts in a scrap html file, used curl to send purposefully untrustworthy data to the server, and managed the manually inserted test entries from the mLab website.</p>
 
 <h3>Abstract of Findings</h3>
 <p>(Provide an overview of all the security and privacy issues you identified. This section should be written for non-technical managers who do not have technical expertise and do not have time to read the entire document. Write this section using lay language.)</p>
@@ -64,10 +64,9 @@
 </ol>
 
 <h3>Conclusion</h3>
-<p>(You can also list future considerations and recommendations with costs.)</p>
+<p>Clearly, you can never trust user input, so if the application needs to take in user input, safeguards are necessary to strip it of danger.</p>
 
 <h3>References</h3>
-<p>(A list of references and links that you used for your work.)</p>
 <ul>
 <li></li>
 </ul>
