--- a/security/index.html
+++ b/security/index.html
@@ -20,7 +20,7 @@
 <p>To test, I wrote practice scripts in a scrap html file, used curl to send purposefully untrustworthy data to the server, and managed the manually inserted test entries from the mLab website.</p>
 
 <h3>Abstract of Findings</h3>
-<p>(Provide an overview of all the security and privacy issues you identified. This section should be written for non-technical managers who do not have technical expertise and do not have time to read the entire document. Write this section using lay language.)</p>
+<p>I discovered several issues mainly concerning the login username. When someone is using the application to view the map, or list for previous times they viewed the map, their login remains unchecked. As a result, the application is vulnerable to attackers that may put up harmful content on the site itself, redirect to other sites, download unwanted content, and view information they should not be allowed to view.</p>
 
 <h3>Issues Found</h3>
 <ol>
